--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -6,10 +6,14 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
-            <img src="{{ book.cover_image.url }}" class="img-fluid mb-3" alt="{{ book.title }} cover image">
+            {% if book.cover_image.url == 'https://res.cloudinary.com/dxtaxsd1v/image/upload/placeholder' %}
+            <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image">
+            {% else %}
+            <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}">
+            {% endif %}
         </div>
         <div class="col-md-8 mb-4">
-            <h1>{{ book.title }}</h1>
+            <h1>{{ book.title }}</h1>   
             <p><strong>Author:</strong> {{ book.author }}</p>
             <p><strong>Published Year:</strong> {{ book.published_year }}</p>
             
