--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -42,10 +42,10 @@
                                 <div class="d-flex">
                                     <!-- Use a default book cover image if it has no cover image in the database -->
                                     <div class="image-container me-3">
-                                        {% if book.cover_image %}
-                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
+                                        {% if book.cover_image.url == 'https://res.cloudinary.com/dxtaxsd1v/image/upload/placeholder' %}
+                                        <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" style="max-width: 100px;">
                                         {% else %}
-                                        <img class="img-fluid" src="{% static 'images/book_default.jpg' %}" alt="placeholder image" style="max-width: 100px;">
+                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
                                         {% endif %}
                                     </div>
                                     <!-- Display basic book details -->
