--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
     <header>
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">Page Turner</a>
+            <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">
+                <img src="{% static 'images/page-turner-logo.png' %}" alt='Page Turner' class="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
