--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 {% url 'homepage' as home_url %}
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -95,14 +96,56 @@
         {% block content %}
         {% endblock %}
     </main>
-
+   
     <footer>
-        <ul class="footer-links">
-            <li><a href="{{ home_url }}">Home</a></li>
-            <li><a href="{{ books_url }}">Books</a></li>
-        </ul>
-        <p>&copy; 2024 Page Turner. All rights reserved.</p>
+        <div class="footer-container">
+            <!-- Column 1 -->
+            <div class="footer-column">
+                <div class="site-logo">
+                    <img  src="{% static 'images/page-turner-logo.png' %}" alt='Page Turner'>
+                </div>
+                <p class="site-description">
+                    Page Turner is a dynamic platform where book lovers connect 
+                    to discover new reads, share insights, and build virtual 
+                    bookshelves to track their literary adventures.
+                </p>
+                <div class="social-links">
+                    <a href="https://x.com/" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://facebook.com/" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/" class="social-link"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <hr>
+            
+            <!-- Column 2 -->
+            <div class="footer-column">
+                <h3>Explore</h3>
+                <ul class="page-links">
+                    <li><a href="{{ home_url }}">Home</a></li>
+                    <li><a href="{{ books_url }}">Books</a></li>
+                    <li><a href="{{ about_us_url }}">About Us</a></li>
+                </ul>
+            </div>
+            <hr>
+            
+            <!-- Column 3 -->
+            <div class="footer-column">
+                <ul class="contact-details">
+                    <li><h3>Need some help?</h3></li>
+                    <li><p>Email: info@pageturner.com</p></li>
+                    <li><p>Support Hours: 7am - 5pm</p></li>
+                    <li><p>Mon - Fri</p></li>
+                </ul>
+            </div>
+
+            
+        </div>
+        <!-- Copyright final row -->
+        <div class="copyright">
+            <p>&copy; 2024 Page Turner. All rights reserved.</p>
+        </div>
     </footer>
+    
 
     <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
