--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -3,16 +3,12 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-<div class="container mt-5">
-    <!-- Top left corner links -->
-    <div class="return-nav-links">
-        <span>
-            <a class="nav-link {% if request.path == home_url %}" aria-current="page{% endif %}" 
-                    href="{{ home_url }}">Home</a>
-            <span class="seperator">|</span>
-            <a class="nav-link {% if request.path == books_url %}" aria-current="page{% endif %}"
-                href="{{ books_url }}">Books</a>
-        </span>
+<div class="container mt-1">
+    <!-- Top left corner back button -->
+    <div class="return-button">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
     </div>
     <!-- Display book details -->
     <div class="row">
@@ -205,6 +201,9 @@
 {% block extras %}
 <script>
     const isAuthenticated = {{ user.is_authenticated|yesno:"true,false" }};
+    function goBack() {
+        window.history.back();
+    }
 </script>
 <script src="{% static 'js/comments.js' %}"></script>
 <script src="{% static 'js/ratings.js' %}"></script>
